# blackpill_STM32F411CE

./: .clangd  .gitignore  project.axf  project.build_log.htm  project.cbuild-idx.yml  project.cbuild-pack.yml  project.cproject.yml  project.csolution.yml  project.htm  project.lnp  project.map  project.uvguix.Seif0  project.uvoptx  project.uvprojx  project_Target_1.dep  system_stm32f4xx.d  vcpkg-configuration.json
PCB/: batteryRTC.kicad_sym  dfplayer.kicad_sym  micro.kicad_pcb  micro.kicad_pro  micro.kicad_sch  micro.kicad_sch-bak  muControllers_other.kicad_sym
PCB/BOB-12009/: CONV_BOB-12009.kicad_mod
PCB/DFR0299/: MODULE_DFR0299.kicad_mod
PCB/HW-613/: HW-613.kicad_mod
PCB/TMC2209_SILENTSTEPSTICK/: MODULE_TMC2209_SILENTSTEPSTICK.kicad_mod
PCB/blackpill.pretty/: DIP-40_W15.24mm_LongPads.kicad_mod
PCB/dfrobot.pretty/: DIP-12_913_ELL.kicad_mod
PCB/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
PCB/production/micro/: micro-B_Cu.gbl  micro-B_Mask.gbs  micro-B_Paste.gbp  micro-B_Silkscreen.gbo  micro-Edge_Cuts.gm1  micro-F_Cu.gtl  micro-F_Mask.gts  micro-F_Paste.gtp  micro-F_Silkscreen.gto  micro-NPTH-drl_map.gbr  micro-NPTH.drl  micro-PTH-drl_map.gbr  micro-PTH.drl
RTE/Device/STM32F411CEUx/: regions_STM32F411CEUx.h  startup_stm32f411xe.s  system_stm32f4xx.c
src/: DFPlayer.s  DFPlayer_defs.s  SysTick.asm  UART1.s  UART1_defs.s  adc.asm  bitmaps.asm  brakes.asm  data_memory.s  dio.asm  exti.asm  fft_math.s  font.inc  hardware_config.inc  i2c.asm  keypad.asm  loadcell.s  main.asm  main2.asm  mfrc522.inc  mfrc522.s  mpu6050.asm  port.asm  rcc.asm  rtc_driver.asm  servo_driver.s  sh1106_driver.s  spi.s  stepper.asm  stm32f411.inc  timer.asm  tof.asm  tof400f_driver.s  ui_driver.s
tmp/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  roots.cmake
tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  ac6_linker_script.sct  build.ninja  cmake_install.cmake  compile_commands.json
tmp/project+Target_1/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
tmp/project+Target_1/src/project+Target_1-stamp/: project+Target_1-configure-.cmake  project+Target_1-database-.cmake  project+Target_1-source_dirinfo.txt
tmp/project+Target_1/tmp/: project+Target_1-cfgcmd.txt  project+Target_1-mkdirs.cmake
